[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scripts/Main Menu.gd" type="Script" id=1]
[ext_resource path="res://Resources/Title.png" type="Texture" id=2]
[ext_resource path="res://Resources/background.jpg" type="Texture" id=3]

[sub_resource type="Theme" id=1]
Button/fonts/font = null

[node name="Title Screen" type="Node2D"]
position = Vector2( -1, 0 )
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 3 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 640.0
margin_bottom = 400.0
rect_scale = Vector2( 2, 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 280.0
margin_top = 164.0
margin_right = 360.0
margin_bottom = 236.0
theme = SubResource( 1 )
alignment = 1

[node name="Title" type="Sprite" parent="CenterContainer/VBoxContainer"]
position = Vector2( 40.5, -69 )
scale = Vector2( 4, 4 )
texture = ExtResource( 2 )

[node name="Control" type="Control" parent="CenterContainer/VBoxContainer"]
margin_right = 80.0

[node name="Play Button" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 4.0
margin_right = 80.0
margin_bottom = 24.0
custom_constants/hseparation = 0
shortcut_in_tooltip = false
text = "Play Game"

[node name="Settings" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 28.0
margin_right = 80.0
margin_bottom = 48.0
shortcut_in_tooltip = false
text = "Settings"

[node name="Quit" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 52.0
margin_right = 80.0
margin_bottom = 72.0
shortcut_in_tooltip = false
text = "Quit"

[connection signal="pressed" from="CenterContainer/VBoxContainer/Play Button" to="." method="_on_Play_Button_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Settings" to="." method="_on_Settings_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
